--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
     "dev:docs": "turbo run dev --filter=@better-webhook/docs",
     "build": "turbo run build",
     "lint": "turbo run lint",
+    "security:scan": "just security-scan",
+    "security:scan:blocking": "just security-scan-blocking",
+    "security:scan:sarif": "just security-scan-sarif",
+    "security:scan:secret": "just security-scan-secret",
+    "security:scan:sbom": "just security-scan-sbom",
+    "security:scan:license": "just security-scan-license",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx,md}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx,md}\" --cache",
     "check-types": "turbo run check-types",
